fix word wrap in buttons

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -56,18 +56,29 @@
 }
            
 .play-button {
-    width: 31%;
-    font-size: 30px;
-    margin-left: 60px;
-    margin-right: 60px;
+    width: 33vw;
+
+    white-space: normal;
+    font-size: 25px;
     border: 1px;	
     border-style: solid;
     border-color: #AC1E44;
     border-radius: 3px;
     padding: 2px 30px 1px 30px;
+/*    padding-left:50px;
+    padding-right:50px;*/
+    text-align: center;
+    margin-left: 60px;
+    margin-right: 60px;
     margin-bottom: 40px;
     margin-top: 40px;
+    max-width: 300px;
     background-color: rgba(249, 242, 236, 0.4);
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    -o-hyphens: auto;
+    hyphens: auto;
 
 }       
 .active-button:hover {
